changed the dependency graph, with different priority levels for different types of edges