@@ -46,9 +46,9 @@ public class TestSyntheticConstructor extends CommonTest {
     public void test1() {
         TypeInfo B = javaInspector.parse(INPUT1);
         List<Info> ao = new PrepAnalyzer(runtime).doPrimaryType(B);
-        assertEquals("X.$0.<init>(),X.$0.run(),X.<init>(),X.systemCall(String),X,X.$0",
+        assertEquals("X.$0.<init>(),X.$0.run(),X.<init>(),X.$0,X.systemCall(String),X",
                 ao.stream().map(Info::fullyQualifiedName).collect(Collectors.joining(",")));
-        MethodInfo methodInfo = (MethodInfo) ao.get(0);
+        MethodInfo methodInfo = (MethodInfo) ao.getFirst();
         assertTrue(methodInfo.analysis().haveAnalyzedValueFor(HiddenContentSelector.HCS_METHOD));
     }
 
@@ -101,9 +101,9 @@ public class TestSyntheticConstructor extends CommonTest {
                 // new path since a lambda only causes a variable context rather than a type context
                 // see ParseLambdaExpression, line 67
                 //"B.$0.$0.apply(String),B.<init>(),B.$0.accept(java.util.jar.JarEntry),B.$0.$0,B.main(String[]),B,B.$0",
-                "B.$1.apply(String),B.<init>(),B.$0.accept(java.util.jar.JarEntry),B.$1,B.main(String[]),B,B.$0",
+                "B.$1.apply(String),B.<init>(),B.$1,B.$0.accept(java.util.jar.JarEntry),B.$0,B.main(String[]),B",
                 ao.stream().map(Info::fullyQualifiedName).collect(Collectors.joining(",")));
-        MethodInfo methodInfo = (MethodInfo) ao.get(0);
+        MethodInfo methodInfo = (MethodInfo) ao.getFirst();
         assertTrue(methodInfo.analysis().haveAnalyzedValueFor(HiddenContentSelector.HCS_METHOD));
     }
 
